--- a/templates/bot_downloader_av_setting.html
+++ b/templates/bot_downloader_av_setting.html
@@ -39,10 +39,10 @@
           {{ macros.setting_radio('censored_option_meta', '메타 매칭', ['전체', 'DMM', 'JAVDB'], value=arg['censored_option_meta']) }}
 
           {{ macros.setting_radio('censored_option_mode', '조건 - 모드', ['블랙리스트', '화이트리스트'], desc=['블랙리스트는 조건일치시 다운로드 하지 않고, 화이트리스트는 조건일치시 다운로드 합니다.'], value=arg['censored_option_mode']) }}
-
-          {{ macros.setting_input_textarea('censored_option_label', '조건 - 레이블', desc=['빈칸인 조건을 검사하지 않습니다. 구분자 |'], value=arg['censored_option_label'], row='3') }}
-          {{ macros.setting_input_textarea('censored_option_genre', '조건 - 장르', desc=['빈칸인 조건을 검사하지 않습니다. 구분자 |'], value=arg['censored_option_genre'], row='3') }}
-          {{ macros.setting_input_textarea('censored_option_performer', '조건 - 배우', desc=['빈칸인 조건을 검사하지 않습니다. 구분자 |'], value=arg['censored_option_performer'], row='3') }}
+          {{ macros.setting_input_textarea('censored_option_filter', '조건 - 파일명', desc=['빈칸인 조건은 검사하지 않습니다. 구분자 |', '정규식 지원'], value=arg['censored_option_filter'], row='3') }}
+          {{ macros.setting_input_textarea('censored_option_label', '조건 - 레이블', desc=['빈칸인 조건은 검사하지 않습니다. 구분자 |'], value=arg['censored_option_label'], row='3') }}
+          {{ macros.setting_input_textarea('censored_option_genre', '조건 - 장르', desc=['빈칸인 조건은 검사하지 않습니다. 구분자 |'], value=arg['censored_option_genre'], row='3') }}
+          {{ macros.setting_input_textarea('censored_option_performer', '조건 - 배우', desc=['빈칸인 조건은 검사하지 않습니다. 구분자 |'], value=arg['censored_option_performer'], row='3') }}
         </div>
       {{ macros.m_tab_content_end() }}
 
@@ -54,9 +54,10 @@
           {{ macros.setting_radio('uncensored_torrent_program', '토렌트 프로그램', ['Transmission', 'DownloadStation'], value=arg['uncensored_torrent_program']) }}
           {{ macros.setting_input_text('uncensored_path', '다운로드 경로', value=arg['uncensored_path'], desc='토렌트 프로그램에 맞는 경로를 입력해야 합니다.') }}
           {{ macros.setting_radio('uncensored_option_mode', '조건 - 모드', ['블랙리스트', '화이트리스트'], desc=['블랙리스트는 조건일치시 다운로드 하지 않고, 화이트리스트는 조건일치시 다운로드 합니다.'], value=arg['uncensored_option_mode']) }}
-          {{ macros.setting_input_textarea('uncensored_option_label', '조건 - 레이블', desc=['빈칸인 조건을 검사하지 않습니다. 구분자 |'], value=arg['uncensored_option_label'], row='3') }}
-          {{ macros.setting_input_textarea('uncensored_option_genre', '조건 - 장르', desc=['빈칸인 조건을 검사하지 않습니다. 구분자 |'], value=arg['uncensored_option_genre'], row='3') }}
-          {{ macros.setting_input_textarea('uncensored_option_performer', '조건 - 배우', desc=['빈칸인 조건을 검사하지 않습니다. 구분자 |'], value=arg['uncensored_option_performer'], row='3') }}
+          {{ macros.setting_input_textarea('uncensored_option_filter', '조건 - 파일명', desc=['빈칸인 조건은 검사하지 않습니다. 구분자 |', '정규식 지원'], value=arg['uncensored_option_filter'], row='3') }}
+          {{ macros.setting_input_textarea('uncensored_option_label', '조건 - 레이블', desc=['빈칸인 조건은 검사하지 않습니다. 구분자 |'], value=arg['uncensored_option_label'], row='3') }}
+          {{ macros.setting_input_textarea('uncensored_option_genre', '조건 - 장르', desc=['빈칸인 조건은 검사하지 않습니다. 구분자 |'], value=arg['uncensored_option_genre'], row='3') }}
+          {{ macros.setting_input_textarea('uncensored_option_performer', '조건 - 배우', desc=['빈칸인 조건은 검사하지 않습니다. 구분자 |'], value=arg['uncensored_option_performer'], row='3') }}
         </div>
       {{ macros.m_tab_content_end() }}
 
@@ -68,9 +69,10 @@
           {{ macros.setting_radio('western_torrent_program', '토렌트 프로그램', ['Transmission', 'DownloadStation'], value=arg['western_torrent_program']) }}
           {{ macros.setting_input_text('western_path', '다운로드 경로', value=arg['western_path'], desc='토렌트 프로그램에 맞는 경로를 입력해야 합니다.') }}
           {{ macros.setting_radio('western_option_mode', '조건 - 모드', ['블랙리스트', '화이트리스트'], desc=['블랙리스트는 조건일치시 다운로드 하지 않고, 화이트리스트는 조건일치시 다운로드 합니다.'], value=arg['western_option_mode']) }}
-          {{ macros.setting_input_textarea('western_option_label', '조건 - 레이블', desc=['빈칸인 조건을 검사하지 않습니다. 구분자 |'], value=arg['western_option_label'], row='3') }}
-          {{ macros.setting_input_textarea('western_option_genre', '조건 - 장르', desc=['빈칸인 조건을 검사하지 않습니다. 구분자 |'], value=arg['western_option_genre'], row='3') }}
-          {{ macros.setting_input_textarea('western_option_performer', '조건 - 배우', desc=['빈칸인 조건을 검사하지 않습니다. 구분자 |'], value=arg['western_option_performer'], row='3') }}
+          {{ macros.setting_input_textarea('western_option_filter', '조건 - 파일명', desc=['빈칸인 조건은 검사하지 않습니다. 구분자 |', '정규식 지원'], value=arg['western_option_filter'], row='3') }}
+          {{ macros.setting_input_textarea('western_option_label', '조건 - 레이블', desc=['빈칸인 조건은 검사하지 않습니다. 구분자 |'], value=arg['western_option_label'], row='3') }}
+          {{ macros.setting_input_textarea('western_option_genre', '조건 - 장르', desc=['빈칸인 조건은 검사하지 않습니다. 구분자 |'], value=arg['western_option_genre'], row='3') }}
+          {{ macros.setting_input_textarea('western_option_performer', '조건 - 배우', desc=['빈칸인 조건은 검사하지 않습니다. 구분자 |'], value=arg['western_option_performer'], row='3') }}
         </div>
       {{ macros.m_tab_content_end() }}
       
@@ -82,9 +84,10 @@
           {{ macros.setting_radio('fc2_torrent_program', '토렌트 프로그램', ['Transmission', 'DownloadStation'], value=arg['fc2_torrent_program']) }}
           {{ macros.setting_input_text('fc2_path', '다운로드 경로', value=arg['fc2_path'], desc='토렌트 프로그램에 맞는 경로를 입력해야 합니다.') }}
           {{ macros.setting_radio('fc2_option_mode', '조건 - 모드', ['블랙리스트', '화이트리스트'], desc=['블랙리스트는 조건일치시 다운로드 하지 않고, 화이트리스트는 조건일치시 다운로드 합니다.'], value=arg['fc2_option_mode']) }}
-          {{ macros.setting_input_textarea('fc2_option_label', '조건 - 레이블', desc=['빈칸인 조건을 검사하지 않습니다. 구분자 |'], value=arg['fc2_option_label'], row='3') }}
-          {{ macros.setting_input_textarea('fc2_option_genre', '조건 - 장르', desc=['빈칸인 조건을 검사하지 않습니다. 구분자 |'], value=arg['fc2_option_genre'], row='3') }}
-          {{ macros.setting_input_textarea('fc2_option_performer', '조건 - 배우', desc=['빈칸인 조건을 검사하지 않습니다. 구분자 |'], value=arg['fc2_option_performer'], row='3') }}
+          {{ macros.setting_input_textarea('fc2_option_filter', '조건 - 파일명', desc=['빈칸인 조건은 검사하지 않습니다. 구분자 |', '정규식 지원'], value=arg['fc2_option_filter'], row='3') }}
+          {{ macros.setting_input_textarea('fc2_option_label', '조건 - 레이블', desc=['빈칸인 조건은 검사하지 않습니다. 구분자 |'], value=arg['fc2_option_label'], row='3') }}
+          {{ macros.setting_input_textarea('fc2_option_genre', '조건 - 장르', desc=['빈칸인 조건은 검사하지 않습니다. 구분자 |'], value=arg['fc2_option_genre'], row='3') }}
+          {{ macros.setting_input_textarea('fc2_option_performer', '조건 - 배우', desc=['빈칸인 조건은 검사하지 않습니다. 구분자 |'], value=arg['fc2_option_performer'], row='3') }}
         </div>
       {{ macros.m_tab_content_end() }}
 
