--- a/templates/bot_downloader_av_setting.html
+++ b/templates/bot_downloader_av_setting.html
@@ -23,9 +23,11 @@
         {{ macros.setting_input_int('interval', '스케쥴링 실행 주기', value=arg['interval'], min='1', placeholder='10', desc='minute 단위') }}
         {{ macros.setting_checkbox('auto_start', '시작시 자동실행', value=arg['auto_start'], desc='On : 시작시 자동으로 사용 설정합니다.') }}
         {{ macros.setting_radio('telegram_invoke_action', '텔레그램 수신시', ['실행하지 않음', '스케쥴링 중에만 실행', '스케쥴링 상태가 아니더라도 실행'], value=arg['telegram_invoke_action']) }}
+        {{ macros.setting_checkbox('show_poster', '웹 포스터 표시', value=arg['show_poster']) }}
         {{ macros.setting_checkbox('receive_send_notify', '정보 수신시 알림', value=arg['receive_send_notify'], desc=['ID : bot_downloader_av_receive']) }}
+        {{ macros.setting_checkbox('show_poster_notify', '알림 포스터 표시', value=arg['show_poster_notify']) }}
         {{ macros.setting_checkbox('result_send_notify', '처리 결과 알림', value=arg['result_send_notify'], desc=['ID : bot_downloader_av_result']) }}
-        {{ macros.setting_checkbox('show_poster', '포스터 표시', value=arg['show_poster']) }}
+        
         {{ macros.setting_checkbox('show_log', '목록에 조건처리 로그 표시', value=arg['show_log']) }}
       {{ macros.m_tab_content_end() }}
 
