--- a/templates/bot_downloader_av_setting.html
+++ b/templates/bot_downloader_av_setting.html
@@ -27,8 +27,10 @@
         {{ macros.setting_checkbox('receive_send_notify', '정보 수신시 알림', value=arg['receive_send_notify'], desc=['ID : bot_downloader_av_receive']) }}
         {{ macros.setting_checkbox('show_poster_notify', '알림 포스터 표시', value=arg['show_poster_notify']) }}
         {{ macros.setting_checkbox('result_send_notify', '처리 결과 알림', value=arg['result_send_notify'], desc=['ID : bot_downloader_av_result']) }}
-        
         {{ macros.setting_checkbox('show_log', '목록에 조건처리 로그 표시', value=arg['show_log']) }}
+        {{ macros.m_hr() }}
+        {{ macros.setting_input_text('remote_path', '공유 기능 사용시 리모트 경로', value=arg['remote_path'], desc=['구글 드라이브 공유 플러그인이 설치되어 있어야 합니다.']) }}
+        {{ macros.setting_radio('share_receive_option', '구드공 데이터 활용', ['Nothing', '다운로드 조건에 상관없이 모두 다운로드', '다운로드 조건만 체크 옵션일 경우 조건에 일치하면 즉시 다운로드', '자동 자동로드 모드. 지연시간 이후 다운로드 시도시 구드공 데이터가 있을 경우 구드공으로 다운로드'], value=arg['share_receive_option']) }}
       {{ macros.m_tab_content_end() }}
 
       {{ macros.m_tab_content_start('censored', false) }}
