--- a/templates/bot_downloader_av_list.html
+++ b/templates/bot_downloader_av_list.html
@@ -227,6 +227,8 @@ function make_list(data) {
       tmp2 = '✔조건일치 - 상태만'
     } else if (data[i].download_status == 'false_only_status') {
       tmp2 = '⛔조건불일치 - 상태만'
+    } else {
+      tmp2 = ''
     }
 
     if (show_log && data[i].log != '' && data[i].log != null) {
