--- a/templates/bot_downloader_av_setting.html
+++ b/templates/bot_downloader_av_setting.html
@@ -11,7 +11,6 @@
       {{ macros.m_tab_head2('censored', 'Censored', false) }}
       {{ macros.m_tab_head2('uncensored', 'Uncensored', false) }}
       {{ macros.m_tab_head2('western', 'Western', false) }}
-      {{ macros.m_tab_head2('fc2', 'FC2', false) }}
       {{ macros.m_tab_head2('action', '기타', false) }}
     {{ macros.m_tab_head_end() }}
   </nav>
@@ -29,7 +28,9 @@
         {{ macros.setting_checkbox('result_send_notify', '처리 결과 알림', value=arg['result_send_notify'], desc=['ID : bot_downloader_av_result']) }}
         {{ macros.setting_checkbox('show_log', '목록에 조건처리 로그 표시', value=arg['show_log']) }}
         {{ macros.m_hr() }}
-        {{ macros.setting_input_text('remote_path', '공유 기능 사용시 리모트 경로', value=arg['remote_path'], desc=['구글 드라이브 공유 플러그인이 설치되어 있어야 합니다.']) }}
+        {{ macros.setting_input_text('censored_remote_path', '공유 기능 사용시 리모트 경로(censored)', value=arg['censored_remote_path'], desc=['구글 드라이브 공유 플러그인이 설치되어 있어야 합니다.']) }}
+        {{ macros.setting_input_text('uncensored_remote_path', '공유 기능 사용시 리모트 경로(uncensored)', value=arg['uncensored_remote_path'], desc=['구글 드라이브 공유 플러그인이 설치되어 있어야 합니다.']) }}
+        {{ macros.setting_input_text('western_remote_path', '공유 기능 사용시 리모트 경로(western)', value=arg['western_remote_path'], desc=['구글 드라이브 공유 플러그인이 설치되어 있어야 합니다.']) }}
         {{ macros.setting_radio('share_receive_option', '구드공 데이터 활용', ['Nothing', '다운로드 조건에 상관없이 모두 다운로드', '다운로드 조건만 체크 옵션일 경우 조건에 일치하면 즉시 다운로드', '자동 자동로드 모드. 지연시간 이후 다운로드 시도시 구드공 데이터가 있을 경우 구드공으로 다운로드'], value=arg['share_receive_option']) }}
       {{ macros.m_tab_content_end() }}
 
@@ -91,30 +92,12 @@
         </div>
       {{ macros.m_tab_content_end() }}
       
-      {{ macros.m_tab_content_start('fc2', false) }}
-        {{ macros.setting_checkbox('fc2_receive', '수신', value=arg['fc2_receive'], desc=['On : 수신 받은 데이터를 저장합니다.']) }}
-        {{ macros.setting_radio('fc2_allow_duplicate2', '동일 품번', ['모두 수신', '기존 영상보다 고용량일 경우 수신', '동일 품번 수신하지 않음'], value=arg['fc2_allow_duplicate2']) }}
-        {{ macros.setting_radio('fc2_auto_download', '자동 다운로드', ['사용 안함(정보만 수신)', '자동 다운로드', '다운로드 조건만 체크하여 표시. Offcloud 등 타앱에서 RSS로 사용시'], value=arg['fc2_auto_download']) }}
-        <div id="fc2_auto_download_div" class="collapse">
-          {{ macros.setting_radio('fc2_torrent_program', '토렌트 프로그램', ['트랜스미션', '다운로드 스테이션', '큐빗토렌트', 'aria2'], value=arg['fc2_torrent_program']) }}
-          {{ macros.setting_input_text('fc2_path', '다운로드 경로', value=arg['fc2_path'], desc='토렌트 프로그램에 맞는 경로를 입력해야 합니다.') }}
-          {{ macros.setting_radio('fc2_option_mode', '조건 - 모드', ['블랙리스트', '화이트리스트'], desc=['블랙리스트는 조건일치시 다운로드 하지 않고, 화이트리스트는 조건일치시 다운로드 합니다.'], value=arg['fc2_option_mode']) }}
-          {{ macros.setting_input_textarea('fc2_option_filter', '조건 - 파일명', desc=['빈칸인 조건은 검사하지 않습니다. 구분자 |'], value=arg['fc2_option_filter'], row='3') }}
-          {{ macros.setting_input_textarea('fc2_option_label', '조건 - 레이블', desc=['빈칸인 조건은 검사하지 않습니다. 구분자 |'], value=arg['fc2_option_label'], row='3') }}
-          {{ macros.setting_input_textarea('fc2_option_genre', '조건 - 장르', desc=['빈칸인 조건은 검사하지 않습니다. 구분자 |'], value=arg['fc2_option_genre'], row='3') }}
-          {{ macros.setting_input_textarea('fc2_option_performer', '조건 - 배우', desc=['빈칸인 조건은 검사하지 않습니다. 구분자 |'], value=arg['fc2_option_performer'], row='3') }}
-          {{ macros.m_hr() }}
-          {{ macros.setting_input_int('fc2_option_min_size', '최소 크기', value=arg['fc2_option_min_size'], desc=['이 값 보다 작으면 받지 않습니다.', '0이면 조건을 검사하지 않습니다.', 'GB 단위. 소숫점 지원']) }}
-          {{ macros.setting_input_int('fc2_option_max_size', '최대 크기', value=arg['fc2_option_max_size'], desc=['이 값 보다 크면 받지 않습니다.', '0이면 조건을 검사하지 않습니다.', 'GB 단위. 소숫점 지원']) }}
-        </div>
-      {{ macros.m_tab_content_end() }}
-
       {{ macros.m_tab_content_start('action', false) }}
         {{ macros.setting_button([['global_one_execute_btn', '1회 실행']], left='1회 실행' ) }}
         {{ macros.setting_button([['global_reset_db_btn', '목록 전체 지우기']], left='DB정리' ) }}
         {{ macros.info_text_and_buttons('last_id', '마지막 ID', [['reset_last_index_btn', 'ID 초기화']], value='마지막 ID : ' + arg['last_id'], desc=['DB에 저장된 Index를 지웁니다', '최초 시작처럼 7일 이내 데이터를 모두 처리합니다.']) }}
         {{ macros.m_hr() }}
-        {{ macros.info_text_go('rss_api', 'RSS API', value=arg['rss_api'], desc=['파라미터', ' - type : 타입. censored, uncensored, western, fc2', ' - search : 품번 키워드. 연산자 지원', '- count : 피드 수. 기본값 100', '- option : 생략가능.', '> wait : 판단이전', '> true : 조건일치 - 요청', '> false : 조건불일치 - 패스', '> true_only_status : 조건일치 - 상태만', '> false_only_status : 조건불일치 - 상태만', '> no : 자동다운로드 사용 안함', '- server_id_mod : 나눌 숫자_나머지. 서버 ID 기준', '', '연산자', '- AND 연산자 : 구분자 ,', '- OR연산자 : 구분자 |', '']) }}
+        {{ macros.info_text_go('rss_api', 'RSS API', value=arg['rss_api'], desc=['파라미터', ' - type : 타입. censored, uncensored, western', ' - search : 품번 키워드. 연산자 지원', '- count : 피드 수. 기본값 100', '- option : 생략가능.', '> wait : 판단이전', '> true : 조건일치 - 요청', '> false : 조건불일치 - 패스', '> true_only_status : 조건일치 - 상태만', '> false_only_status : 조건불일치 - 상태만', '> no : 자동다운로드 사용 안함', '- server_id_mod : 나눌 숫자_나머지. 서버 ID 기준', '', '연산자', '- AND 연산자 : 구분자 ,', '- OR연산자 : 구분자 |', '']) }}
 
       {{ macros.m_tab_content_end() }}  
     </div><!--tab-content-->
@@ -134,9 +117,6 @@ $(document).ready(function(){
   }
   if (parseInt( "{{arg['western_auto_download']}}" )>= 1) {
     $('#western_auto_download_div').collapse('show')
-  }
-  if (parseInt( "{{arg['fc2_auto_download']}}" )>= 1) {
-    $('#fc2_auto_download_div').collapse('show')
   }
 });
 
@@ -162,14 +142,6 @@ $('input[type=radio][name=western_auto_download]').change(function() {
     $('#western_auto_download_div').collapse('hide')
   } else {
     $('#western_auto_download_div').collapse('show')
-  }
-});
-
-$('input[type=radio][name=fc2_auto_download]').change(function() {
-  if (this.value == 0) {
-    $('#fc2_auto_download_div').collapse('hide')
-  } else {
-    $('#fc2_auto_download_div').collapse('show')
   }
 });
 
