--- a/templates/bot_downloader_av_receive_setting.html
+++ b/templates/bot_downloader_av_receive_setting.html
@@ -41,7 +41,7 @@
         <div id="censored_auto_download_div" class="collapse">
           {{ macros.setting_radio('censored_torrent_program', '토렌트 프로그램', ['트랜스미션', '다운로드 스테이션', '큐빗토렌트', 'aria2'], value=arg['censored_torrent_program']) }}
           {{ macros.setting_input_text('censored_path', '다운로드 경로', value=arg['censored_path'], desc='토렌트 프로그램에 맞는 경로를 입력해야 합니다.') }}
-          {{ macros.setting_radio('censored_option_meta', '메타 매칭', ['전체', 'DMM', 'JAVDB'], value=arg['censored_option_meta']) }}
+          {{ macros.setting_radio('censored_option_meta', '메타 매칭', ['전체', 'DVD', 'AMA'], value=arg['censored_option_meta']) }}
 
           {{ macros.setting_radio('censored_option_mode', '조건 - 모드', ['블랙리스트', '화이트리스트'], desc=['블랙리스트는 조건일치시 다운로드 하지 않고, 화이트리스트는 조건일치시 다운로드 합니다.'], value=arg['censored_option_mode']) }}
           {{ macros.setting_input_textarea('censored_option_filter', '조건 - 파일명', desc=['빈칸인 조건은 검사하지 않습니다. 구분자 |'], value=arg['censored_option_filter'], row='3') }}
